<resources>
    <string name="microphone">Mic</string>
    <string name="background_music">Background Music</string>
    <string name="music_volume">Music</string>
    <string name="vocal_volume">Voice</string>
    <string name="room_has_been_disbanded">The room is closed</string>
    <string name="input_contains_sensitive_words_please_re_enter">Your comment may be uncomfortable to others. Please rethink before posting</string>
    <string name="verificationcode_has_expired_please_resend">Verification failed. Please click Resend and try again.</string>
    <string name="verificationcode_incorrect_please_resend">Wrong code. Please click Resend and try again.</string>
    <string name="login_has_expired_please_login_again">Login has expired. Please try to log in again.</string>
    <string name="operation_failed_please_try_again">Please try again</string>
    <string name="server_token_generation_failed_please_try_again">Generating token failed. Please try again</string>
    <string name="network_link_is_down_please_check_the_settings">No internet connection. Connect to the internet and ty again.</string>
    <string name="are_you_sure_to_block_the_microphone">Sure to block this guest seat? If so, an audience can\'t be a guest in the seat, and the guest in the seat will be changed into an audience.</string>
    <string name="application_has_been_sent_to_the_host">Guest request sent</string>
    <string name="you_are_on_the_mic">You have been a guest</string>
    <string name="invite_to_mic">Invite</string>
    <string name="distinguished_guests">Disconnect</string>
    <string name="unmute">Unmute</string>
    <string name="mute_mic">Mute</string>
    <string name="lock_mic">Block</string>
    <string name="unlock_mic">Unblock</string>
    <string name="on_mic">Request</string>
    <string name="leave_mic">Disconnect</string>
    <string name="mic_bit">Seat</string>
    <string name="voice_joined_the_room">Joined the room</string>
    <string name="voice_leave_the_room">left the room</string>
    <string name="no_online_audience">No audience</string>
    <string name="online_audience">Audience</string>
    <string name="application_message">Guest requests</string>
    <string name="visitor_connection_application">Grant guest request</string>
    <string name="no_application_news">No guest requests yet</string>
    <string name="Invitation_has_been_sent_to_the_audience">Invitation has been sent. Waiting for responding.</string>
    <string name="already_on_mic">Connected</string>
    <string name="invited">Invited</string>
    <string name="start_live_broadcast">Go LIVE</string>
    <string name="live_room_has_ended">LIVE has ended</string>
    <string name="you_are_on_mic">You have been a guest</string>
    <string name="you_have_been_removed_from_the_mic">You have been removed from guest.</string>
    <string name="you_have_leave_mic">You have been an audience</string>
    <string name="anchor_invites_you_to_the_mic">Host is inviting you to go LIVE together</string>
    <string name="viewer_xxx_declined_your_invitation">%s declines your invitation</string>
    <string name="anchor_has_unmuted_you">You have been unmuted</string>
    <string name="you_have_been_muted_by_the_host">You have been muted</string>
    <string name="end_live">Confirm</string>
    <string name="do_you_want_to_end_the_live_broadcast">Are you sure end this LIVE？</string>
    <string name="xxx_live_room">%s\'s room</string>
    <string name="create_room">Create a Room</string>
    <string name="noone_has_created_a_chatroom">No one has created a chatting room. Create one.</string>
    <string name="xxx_voice_chat_room">%s\'s room</string>
    <string name="background">Background</string>
    <string name="open_chat_room">Go LIVE</string>
    <string name="upstream_packet_lossrate">Upload Packet Loss</string>
    <string name="downstream_packet_lossrate">Download Packet Loss</string>
    <string name="xxx_mic_location">Seat %s</string>
    <string name="room_name_cannot_be_empty">Enter a room name</string>
    <string name="are_you_sure_to_end_the_voice_chatroom">End LIVE?</string>
    <string name="only_supports_chinese_letters_numbers">No more than 18 characters with a mix of Chinese, letters &amp; numbers</string>
    <string name="liveing">On LIVE</string>
    <string name="xxx_has_been_on_the_mic_message">%s becomes a guest</string>
    <string name="xxx_has_dropped_the_mic_message">%s becomes an audience.</string>
    <string name="voice_chat_room">Chatting room</string>
    <string name="voice_left_room">has left</string>
</resources>