<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="408dp"
    android:minHeight="408dp"
    tools:ignore="HardcodedText,SpUsage"
    android:background="#F20E0825">

    <TextView
        android:id="@+id/manager_switch_title"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:gravity="center_vertical"
        android:text="@string/visitor_connection_application"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/manager_switch"
        style="@style/SwitchLg"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/manager_switch_title"
        app:layout_constraintLeft_toRightOf="@+id/manager_switch_title"
        app:layout_constraintTop_toTopOf="@+id/manager_switch_title"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="48dp"
        android:background="#1E1C30"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/manager_middle"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/manager_online_tab"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/online_audience"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/manager_middle"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/manager_online_indicator"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:background="#4080FF"
        app:layout_constraintBottom_toBottomOf="@id/manager_online_tab"
        app:layout_constraintLeft_toLeftOf="@id/manager_online_tab"
        app:layout_constraintRight_toRightOf="@id/manager_online_tab" />

    <TextView
        android:id="@+id/manager_apply_tab"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/application_message"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintLeft_toRightOf="@+id/manager_middle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/manager_apply_red_dot"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/voice_chat_red_dot"
        app:layout_constraintLeft_toRightOf="@id/manager_apply_tab"
        app:layout_constraintRight_toRightOf="@id/manager_apply_tab"
        app:layout_constraintTop_toTopOf="@id/manager_apply_tab" />

    <View
        android:id="@+id/manager_apply_indicator"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:background="#4080FF"
        app:layout_constraintBottom_toBottomOf="@id/manager_apply_tab"
        app:layout_constraintLeft_toLeftOf="@id/manager_apply_tab"
        app:layout_constraintRight_toRightOf="@id/manager_apply_tab" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/manager_online_list"
        android:layout_width="match_parent"
        android:layout_height="316dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/item_voice_chat_main_audience" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/manager_apply_list"
        android:layout_width="match_parent"
        android:layout_height="316dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/item_voice_chat_main_audience" />

    <LinearLayout
        android:id="@+id/manager_online_empty_list_view"
        android:layout_width="match_parent"
        android:layout_height="316dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_width="228dp"
            android:layout_height="93dp"
            android:scaleType="fitXY"
            android:src="@drawable/empty_list_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_online_audience"
            android:textColor="#D3C6C6"
            android:textSize="12dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/manager_apply_empty_list_view"
        android:layout_width="match_parent"
        android:layout_height="316dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_width="228dp"
            android:layout_height="93dp"
            android:scaleType="fitXY"
            android:src="@drawable/empty_list_icon" />

        <TextView
            android:id="@+id/manager_empty_list_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_application_news"
            android:textColor="#D3C6C6"
            android:textSize="12dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>